Apache2ScaleSet/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "galleries_Linux_name": {
            "defaultValue": "Linux",
            "type": "String"
        },
        "loadBalancers_VMSS_LB_name": {
            "defaultValue": "VMSS-LB",
            "type": "String"
        },
        "virtualNetworks_LB_vNet_name": {
            "defaultValue": "LB-vNet",
            "type": "String"
        },
        "virtualMachineScaleSets_AZVMSS_name": {
            "defaultValue": "AZVMSS",
            "type": "String"
        },
        "publicIPAddresses_VMSS_LB_publicip_name": {
            "defaultValue": "VMSS-LB-publicip",
            "type": "String"
        },
        "networkSecurityGroups_basicNsgLB_vNet_nic01_name": {
            "defaultValue": "basicNsgLB-vNet-nic01",
            "type": "String"
        },
        "virtualMachines_GI_Apache2_externalid": {
            "defaultValue": "/subscriptions/bedcbd69-b9dc-4cfa-85a5-491ecf27b060/resourceGroups/azure-load-balance/providers/Microsoft.Compute/virtualMachines/GI-Apache2",
            "type": "String"
        },
        "virtualMachines_GI_externalid": {
            "defaultValue": "/subscriptions/bedcbd69-b9dc-4cfa-85a5-491ecf27b060/resourceGroups/azure-load-balance/providers/Microsoft.Compute/virtualMachines/GI",
            "type": "String"
        },
        "disks_AZVMSS_AZVMSS_0_OsDisk_1_b75c9cf6f13f446e989ab1dd38c49b2d_externalid": {
            "defaultValue": "/subscriptions/bedcbd69-b9dc-4cfa-85a5-491ecf27b060/resourceGroups/AZURE-LOAD-BALANCE/providers/Microsoft.Compute/disks/AZVMSS_AZVMSS_0_OsDisk_1_b75c9cf6f13f446e989ab1dd38c49b2d",
            "type": "String"
        },
        "disks_AZVMSS_AZVMSS_1_OsDisk_1_42a98368111b4b2c9c6ee5bbd9edd079_externalid": {
            "defaultValue": "/subscriptions/bedcbd69-b9dc-4cfa-85a5-491ecf27b060/resourceGroups/AZURE-LOAD-BALANCE/providers/Microsoft.Compute/disks/AZVMSS_AZVMSS_1_OsDisk_1_42a98368111b4b2c9c6ee5bbd9edd079",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Compute/galleries",
            "apiVersion": "2022-03-03",
            "name": "[parameters('galleries_Linux_name')]",
            "location": "uksouth",
            "properties": {
                "identifier": {}
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-09-01",
            "name": "[parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name')]",
            "location": "uksouth",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowMyIpAddressHTTPInbound",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'), 'AllowMyIpAddressHTTPInbound')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowMyIpAddressSSHInbound",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'), 'AllowMyIpAddressSSHInbound')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "81.108.38.47",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-09-01",
            "name": "[parameters('publicIPAddresses_VMSS_LB_publicip_name')]",
            "location": "uksouth",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "ipAddress": "51.143.144.231",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 15,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Compute/galleries/images",
            "apiVersion": "2022-03-03",
            "name": "[concat(parameters('galleries_Linux_name'), '/Apache2-v1')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/galleries', parameters('galleries_Linux_name'))]"
            ],
            "properties": {
                "hyperVGeneration": "V2",
                "architecture": "x64",
                "features": [
                    {
                        "name": "SecurityType",
                        "value": "TrustedLaunch"
                    },
                    {
                        "name": "DiskControllerTypes",
                        "value": "SCSI"
                    }
                ],
                "osType": "Linux",
                "osState": "Specialized",
                "identifier": {
                    "publisher": "canonical",
                    "offer": "0001-com-ubuntu-server-focal",
                    "sku": "20_04-lts-gen2"
                },
                "recommended": {
                    "vCPUs": {
                        "min": 1,
                        "max": 16
                    },
                    "memory": {
                        "min": 1,
                        "max": 32
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers",
            "apiVersion": "2023-09-01",
            "name": "[parameters('loadBalancers_VMSS_LB_name')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_VMSS_LB_publicip_name'))]"
            ],
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "[concat(parameters('loadBalancers_VMSS_LB_name'), '-frontendconfig01')]",
                        "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_VMSS_LB_name')), concat('/frontendIPConfigurations/', parameters('loadBalancers_VMSS_LB_name'), '-frontendconfig01'))]",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_VMSS_LB_publicip_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "[concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01')]",
                        "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]",
                        "properties": {
                            "loadBalancerBackendAddresses": [
                                {
                                    "name": "4d49dcd4-15f9-40b3-802b-e7a123ec59ec",
                                    "properties": {}
                                },
                                {
                                    "name": "4c6e2286-6f3b-4d1d-bc7f-17f88935f4d7",
                                    "properties": {}
                                }
                            ]
                        }
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "[concat(parameters('loadBalancers_VMSS_LB_name'), '-lbrule01')]",
                        "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_VMSS_LB_name')), concat('/loadBalancingRules/', parameters('loadBalancers_VMSS_LB_name'), '-lbrule01'))]",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_VMSS_LB_name')), concat('/frontendIPConfigurations/', parameters('loadBalancers_VMSS_LB_name'), '-frontendconfig01'))]"
                            },
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 15,
                            "protocol": "Tcp",
                            "enableTcpReset": false,
                            "loadDistribution": "Default",
                            "disableOutboundSnat": true,
                            "backendAddressPool": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]"
                            },
                            "backendAddressPools": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]"
                                }
                            ],
                            "probe": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_VMSS_LB_name')), concat('/probes/', parameters('loadBalancers_VMSS_LB_name'), '-probe01'))]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "[concat(parameters('loadBalancers_VMSS_LB_name'), '-probe01')]",
                        "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_VMSS_LB_name')), concat('/probes/', parameters('loadBalancers_VMSS_LB_name'), '-probe01'))]",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 15,
                            "numberOfProbes": 2,
                            "probeThreshold": 1
                        }
                    }
                ],
                "inboundNatRules": [],
                "outboundRules": [],
                "inboundNatPools": []
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers/backendAddressPools",
            "apiVersion": "2023-09-01",
            "name": "[concat(parameters('loadBalancers_VMSS_LB_name'), '/', parameters('loadBalancers_VMSS_LB_name'), '-backendpool01')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_VMSS_LB_name'))]"
            ],
            "properties": {
                "loadBalancerBackendAddresses": [
                    {
                        "name": "4d49dcd4-15f9-40b3-802b-e7a123ec59ec",
                        "properties": {}
                    },
                    {
                        "name": "4c6e2286-6f3b-4d1d-bc7f-17f88935f4d7",
                        "properties": {}
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2023-09-01",
            "name": "[concat(parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'), '/AllowMyIpAddressHTTPInbound')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2023-09-01",
            "name": "[concat(parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'), '/AllowMyIpAddressSSHInbound')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "81.108.38.47",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 110,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2023-09-01",
            "name": "[parameters('virtualNetworks_LB_vNet_name')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "encryption": {
                    "enabled": false,
                    "enforcement": "AllowUnencrypted"
                },
                "subnets": [
                    {
                        "name": "default",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LB_vNet_name'), 'default')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
                            },
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    },
                    {
                        "name": "3qr-appgw",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LB_vNet_name'), '3qr-appgw')]",
                        "properties": {
                            "addressPrefix": "10.0.1.0/24",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2023-09-01",
            "name": "[concat(parameters('virtualNetworks_LB_vNet_name'), '/3qr-appgw')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_LB_vNet_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.0.1.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Compute/galleries/images/versions",
            "apiVersion": "2022-03-03",
            "name": "[concat(parameters('galleries_Linux_name'), '/Apache2-v1/1.0.0')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/galleries/images', parameters('galleries_Linux_name'), 'Apache2-v1')]",
                "[resourceId('Microsoft.Compute/galleries', parameters('galleries_Linux_name'))]"
            ],
            "properties": {
                "publishingProfile": {
                    "targetRegions": [
                        {
                            "name": "UK South",
                            "regionalReplicaCount": 1,
                            "storageAccountType": "Standard_LRS"
                        }
                    ],
                    "replicaCount": 1,
                    "excludeFromLatest": false,
                    "storageAccountType": "Standard_LRS",
                    "replicationMode": "Full"
                },
                "storageProfile": {
                    "source": {
                        "id": "[parameters('virtualMachines_GI_Apache2_externalid')]"
                    },
                    "osDiskImage": {
                        "hostCaching": "ReadWrite",
                        "source": {}
                    }
                },
                "safetyProfile": {
                    "allowDeletionOfReplicatedLocations": true
                }
            }
        },
        {
            "type": "Microsoft.Compute/galleries/images/versions",
            "apiVersion": "2022-03-03",
            "name": "[concat(parameters('galleries_Linux_name'), '/Apache2-v1/1.0.1')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/galleries/images', parameters('galleries_Linux_name'), 'Apache2-v1')]",
                "[resourceId('Microsoft.Compute/galleries', parameters('galleries_Linux_name'))]"
            ],
            "properties": {
                "publishingProfile": {
                    "targetRegions": [
                        {
                            "name": "UK South",
                            "regionalReplicaCount": 1,
                            "storageAccountType": "Standard_LRS"
                        }
                    ],
                    "replicaCount": 1,
                    "excludeFromLatest": false,
                    "storageAccountType": "Standard_LRS",
                    "replicationMode": "Full"
                },
                "storageProfile": {
                    "source": {
                        "id": "[parameters('virtualMachines_GI_Apache2_externalid')]"
                    },
                    "osDiskImage": {
                        "hostCaching": "ReadWrite",
                        "source": {}
                    }
                },
                "safetyProfile": {
                    "allowDeletionOfReplicatedLocations": true
                }
            }
        },
        {
            "type": "Microsoft.Compute/galleries/images/versions",
            "apiVersion": "2022-03-03",
            "name": "[concat(parameters('galleries_Linux_name'), '/Apache2-v1/1.0.2')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/galleries/images', parameters('galleries_Linux_name'), 'Apache2-v1')]",
                "[resourceId('Microsoft.Compute/galleries', parameters('galleries_Linux_name'))]"
            ],
            "properties": {
                "publishingProfile": {
                    "targetRegions": [
                        {
                            "name": "UK South",
                            "regionalReplicaCount": 1,
                            "storageAccountType": "Standard_LRS"
                        }
                    ],
                    "replicaCount": 1,
                    "excludeFromLatest": false,
                    "storageAccountType": "Standard_LRS",
                    "replicationMode": "Full"
                },
                "storageProfile": {
                    "source": {
                        "id": "[parameters('virtualMachines_GI_externalid')]"
                    },
                    "osDiskImage": {
                        "hostCaching": "ReadWrite",
                        "source": {}
                    }
                },
                "safetyProfile": {
                    "allowDeletionOfReplicatedLocations": true
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2023-09-01",
            "name": "[concat(parameters('virtualNetworks_LB_vNet_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_LB_vNet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.0.0.0/24",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachineScaleSets",
            "apiVersion": "2023-03-01",
            "name": "[parameters('virtualMachineScaleSets_AZVMSS_name')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/galleries/images/versions', parameters('galleries_Linux_name'), 'Apache2-v1', '1.0.2')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LB_vNet_name'), 'default')]",
                "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]"
            ],
            "sku": {
                "name": "Standard_B1s",
                "tier": "Standard",
                "capacity": 2
            },
            "properties": {
                "singlePlacementGroup": false,
                "orchestrationMode": "Uniform",
                "upgradePolicy": {
                    "mode": "Manual"
                },
                "scaleInPolicy": {
                    "rules": [
                        "Default"
                    ],
                    "forceDeletion": false
                },
                "virtualMachineProfile": {
                    "storageProfile": {
                        "osDisk": {
                            "osType": "Linux",
                            "createOption": "FromImage",
                            "caching": "ReadWrite",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS"
                            },
                            "diskSizeGB": 30
                        },
                        "imageReference": {
                            "id": "[resourceId('Microsoft.Compute/galleries/images/versions', parameters('galleries_Linux_name'), 'Apache2-v1', '1.0.2')]"
                        },
                        "diskControllerType": "SCSI"
                    },
                    "networkProfile": {
                        "networkInterfaceConfigurations": [
                            {
                                "name": "LB-vNet-nic01",
                                "properties": {
                                    "primary": true,
                                    "enableAcceleratedNetworking": false,
                                    "disableTcpStateTracking": false,
                                    "networkSecurityGroup": {
                                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
                                    },
                                    "dnsSettings": {
                                        "dnsServers": []
                                    },
                                    "enableIPForwarding": false,
                                    "ipConfigurations": [
                                        {
                                            "name": "LB-vNet-nic01-defaultIpConfiguration",
                                            "properties": {
                                                "primary": true,
                                                "subnet": {
                                                    "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LB_vNet_name'), 'default')]"
                                                },
                                                "privateIPAddressVersion": "IPv4",
                                                "loadBalancerBackendAddressPools": [
                                                    {
                                                        "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]"
                                                    }
                                                ]
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    },
                    "diagnosticsProfile": {
                        "bootDiagnostics": {
                            "enabled": true
                        }
                    },
                    "extensionProfile": {
                        "extensions": []
                    },
                    "securityProfile": {
                        "uefiSettings": {
                            "secureBootEnabled": true,
                            "vTpmEnabled": true
                        },
                        "securityType": "TrustedLaunch"
                    }
                },
                "overprovision": false,
                "doNotRunExtensionsOnOverprovisionedVMs": false,
                "platformFaultDomainCount": 1
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachineScaleSets/virtualMachines",
            "apiVersion": "2023-03-01",
            "name": "[concat(parameters('virtualMachineScaleSets_AZVMSS_name'), '/0')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_AZVMSS_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LB_vNet_name'), 'default')]",
                "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]",
                "[resourceId('Microsoft.Compute/galleries/images/versions', parameters('galleries_Linux_name'), 'Apache2-v1', '1.0.2')]"
            ],
            "sku": {
                "name": "Standard_B1s",
                "tier": "Standard"
            },
            "properties": {
                "networkProfileConfiguration": {
                    "networkInterfaceConfigurations": [
                        {
                            "name": "LB-vNet-nic01",
                            "properties": {
                                "primary": true,
                                "enableAcceleratedNetworking": false,
                                "disableTcpStateTracking": false,
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
                                },
                                "dnsSettings": {
                                    "dnsServers": []
                                },
                                "enableIPForwarding": false,
                                "ipConfigurations": [
                                    {
                                        "name": "LB-vNet-nic01-defaultIpConfiguration",
                                        "properties": {
                                            "primary": true,
                                            "subnet": {
                                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LB_vNet_name'), 'default')]"
                                            },
                                            "privateIPAddressVersion": "IPv4",
                                            "loadBalancerBackendAddressPools": [
                                                {
                                                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]"
                                                }
                                            ]
                                        }
                                    }
                                ]
                            }
                        }
                    ]
                },
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[resourceId('Microsoft.Compute/galleries/images/versions', parameters('galleries_Linux_name'), 'Apache2-v1', '1.0.2')]"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "AZVMSS_AZVMSS_0_OsDisk_1_b75c9cf6f13f446e989ab1dd38c49b2d",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS",
                            "id": "[parameters('disks_AZVMSS_AZVMSS_0_OsDisk_1_b75c9cf6f13f446e989ab1dd38c49b2d_externalid')]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": [],
                    "diskControllerType": "SCSI"
                },
                "securityProfile": {
                    "uefiSettings": {
                        "secureBootEnabled": true,
                        "vTpmEnabled": true
                    },
                    "securityType": "TrustedLaunch"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[concat(resourceId('Microsoft.Compute/virtualMachineScaleSets/virtualMachines', parameters('virtualMachineScaleSets_AZVMSS_name'), '0'), '/networkInterfaces/LB-vNet-nic01')]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachineScaleSets/virtualMachines",
            "apiVersion": "2023-03-01",
            "name": "[concat(parameters('virtualMachineScaleSets_AZVMSS_name'), '/1')]",
            "location": "uksouth",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_AZVMSS_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LB_vNet_name'), 'default')]",
                "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]",
                "[resourceId('Microsoft.Compute/galleries/images/versions', parameters('galleries_Linux_name'), 'Apache2-v1', '1.0.2')]"
            ],
            "sku": {
                "name": "Standard_B1s",
                "tier": "Standard"
            },
            "properties": {
                "networkProfileConfiguration": {
                    "networkInterfaceConfigurations": [
                        {
                            "name": "LB-vNet-nic01",
                            "properties": {
                                "primary": true,
                                "enableAcceleratedNetworking": false,
                                "disableTcpStateTracking": false,
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgLB_vNet_nic01_name'))]"
                                },
                                "dnsSettings": {
                                    "dnsServers": []
                                },
                                "enableIPForwarding": false,
                                "ipConfigurations": [
                                    {
                                        "name": "LB-vNet-nic01-defaultIpConfiguration",
                                        "properties": {
                                            "primary": true,
                                            "subnet": {
                                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LB_vNet_name'), 'default')]"
                                            },
                                            "privateIPAddressVersion": "IPv4",
                                            "loadBalancerBackendAddressPools": [
                                                {
                                                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_VMSS_LB_name'), concat(parameters('loadBalancers_VMSS_LB_name'), '-backendpool01'))]"
                                                }
                                            ]
                                        }
                                    }
                                ]
                            }
                        }
                    ]
                },
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[resourceId('Microsoft.Compute/galleries/images/versions', parameters('galleries_Linux_name'), 'Apache2-v1', '1.0.2')]"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "AZVMSS_AZVMSS_1_OsDisk_1_42a98368111b4b2c9c6ee5bbd9edd079",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS",
                            "id": "[parameters('disks_AZVMSS_AZVMSS_1_OsDisk_1_42a98368111b4b2c9c6ee5bbd9edd079_externalid')]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": [],
                    "diskControllerType": "SCSI"
                },
                "securityProfile": {
                    "uefiSettings": {
                        "secureBootEnabled": true,
                        "vTpmEnabled": true
                    },
                    "securityType": "TrustedLaunch"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[concat(resourceId('Microsoft.Compute/virtualMachineScaleSets/virtualMachines', parameters('virtualMachineScaleSets_AZVMSS_name'), '1'), '/networkInterfaces/LB-vNet-nic01')]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true
                    }
                }
            }
        }
    ]
}
